# ResumeAnalyser-backend

./: README.md  package-lock.json  package.json
backend/express-backend/: README.md
backend/express-backend/src/: index.ts
backend/fastapi-backend/: README.md
backend/fastapi-backend/src/: main.py
express-backend/: package-lock.json  package.json
express-backend/prisma/: schema.prisma
express-backend/src/: index.ts
express-backend/src/controllers/: auth.controller.ts
express-backend/src/mailtrap/: emails.ts  mailtrap.config.ts
express-backend/src/utils/: asyncHandler.ts  (+1 more)
fastapi-backend/: .gitignore  README.md  f.txt  hi.json  new.txt  out.txt  out1.json  pyproject.toml  resume_analysis_response.json  sdf.json  temp.py
fastapi-backend/Resources/: BEST-PRACTICES.md  CLAUDE.md  CLAUDE2.md
fastapi-backend/src/: config.py  database.py  dependency.py  main.py
fastapi-backend/src/core/: logging.py
fastapi-backend/src/features/resume/: config.py  models.py  repository.py  router.py  schemas.py  services.py
fastapi-backend/src/features/resume/utils/: ai_analyzer.py  ai_config.py  job_match_calculator.py  nlp_analyzer.py  personal_info_extractor.py  prompt_creator.py  response_formatter.py  resume_detail_extractor.py  section_extractor.py  skills_analyzer.py  text_extractor.py  utils.py
fastapi-backend/src/features/users/: models.py  repository.py  router.py
fastapi-backend/src/utils/: server.py
prisma/: schema.prisma
src/: index.ts
src/controllers/: auth.controller.ts
src/routes/: auth.route.ts
src/utils/: generateTokenAndSetCookie.ts
(+5 files in other folders)
